README edited online with Bitbucket

--- a/README
+++ b/README
@@ -31,5 +31,5 @@ DO NOT FORGET TO RE-COMPILE AFTER EDITING FOR THE CHANGES TO HAVE AN EFFECT!
 # Output
 
 For more information about this program, the input parameters, output, 
-etc., please consult the documentation; e.g. open in a broswer the file doc/html/index.html.
+etc., please consult the documentation; e.g. open in a browser the file doc/html/index.html.
 
