--- a/README
+++ b/README
@@ -1,5 +1,17 @@
 (C) Thor Tepper-Garcia (2017)
 
+
+# ACKNOWLEDGEMENT
+
+This code has not as such been published anywhere, but it has been used in
+published work. Please acknowledge its use by referring to:
+
+Tepper-Garcia, T., Bland-Hawthorn, J, and Sutherland, R.S., 2015,
+The Astrophysical Journal, 813.
+
+http://adsabs.harvard.edu/abs/2015ApJ...813...94T
+
+
 # Documentation
 
 For detailed information about this code, please refer to the website give
